--- a/css/signup.css
+++ b/css/signup.css
@@ -35,7 +35,7 @@ a:active {
 }
 .header
 {
-    margin-left: 40%;
+    margin-left: 42%;
     font-size: 45px;
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #DADADA;
@@ -214,7 +214,7 @@ a:active {
 .admin
 {
     height:70px;
-    background-color: #EF6491;
+    background-color: #2EB0BD;
     line-height: 70px;
     font-family: headerFont2,sans-serif;
     font-size: 17px;
@@ -226,7 +226,7 @@ a:active {
 .student
 {
     height:70px;
-    background-color: #FF5A5F;
+    background-color: #4B7DEF;
     line-height: 70px;
     font-family: headerFont2,sans-serif;
     font-size: 17px;
