--- a/css/index.css
+++ b/css/index.css
@@ -11,16 +11,18 @@ a:link {
 
 a:visited {
     text-decoration: none;
+    color: #ffffff;
 }
 
 a:hover {
     text-decoration: none;
-    color: inherit;
+    color: #ffffff;
 
 }
 
 a:active {
     text-decoration: none;
+    color: #ffffff;
 }
 
 .header {
